<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_bottom_navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/nowPlayingFragment"
        android:name="com.ss.moviedb.view.fragments.NowPlayingFragment"
        android:label="@string/text_nowPlaying"
        tools:layout="@layout/fragment_now_playing">
        <action
            android:id="@+id/action_nowPlayingFragment_to_movieDetailFragment"
            app:destination="@id/movieDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/upcomingFragment"
        android:name="com.ss.moviedb.view.fragments.UpcomingFragment"
        android:label="@string/text_upcoming"
        tools:layout="@layout/fragment_upcoming" >
        <action
            android:id="@+id/action_upcomingFragment_to_movieDetailFragment"
            app:destination="@id/movieDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/movieDetailFragment"
        android:name="com.ss.moviedb.view.fragments.MovieDetailFragment"
        android:label="@string/text_movieDetail"
        tools:layout="@layout/fragment_movie_detail">
        <argument
            android:name="movieId"
            android:defaultValue="null"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.ss.moviedb.view.fragments.HomeFragment"
        android:label="@string/text_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_movieDetailFragment"
            app:destination="@id/movieDetailFragment" />
        <action
            android:id="@+id/action_homeFragment_to_genreFragment"
            app:destination="@id/genreFragment" />
    </fragment>
    <fragment
        android:id="@+id/genreFragment"
        android:name="com.ss.moviedb.view.fragments.GenreFragment"
        android:label="@string/text_placeholder"
        tools:layout="@layout/fragment_genre">
        <argument
            android:name="genreId"
            android:defaultValue="null"
            app:argType="string" />
    </fragment>
</navigation>