<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/movie_cardView_poster"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/nowPlaying_imageView_poster"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:adjustViewBounds="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_movie_24" />

            <TextView
                android:id="@+id/nowPlaying_textView_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/text_title"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/nowPlaying_imageView_poster"
                app:layout_constraintTop_toTopOf="@+id/nowPlaying_imageView_poster" />

            <TextView
                android:id="@+id/nowPlaying_textView_overview"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/text_overview"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintBottom_toTopOf="@+id/nowPlaying_textView_releaseDate"
                app:layout_constraintEnd_toEndOf="@+id/nowPlaying_textView_title"
                app:layout_constraintStart_toStartOf="@+id/nowPlaying_textView_title"
                app:layout_constraintTop_toBottomOf="@+id/nowPlaying_textView_title"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/nowPlaying_textView_releaseDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/text_releaseDate"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                app:layout_constraintBottom_toBottomOf="@+id/nowPlaying_imageView_poster"
                app:layout_constraintEnd_toEndOf="@+id/nowPlaying_textView_overview"
                app:layout_constraintStart_toStartOf="@+id/nowPlaying_textView_overview" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>