<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.MovieDetailFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/movieDetail_imageView_backdrop_fragment"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-100dp"
                android:backgroundTint="@color/surface"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movieDetail_imageView_backdrop_fragment">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/movieDetail_imageView_poster_fragment"
                        android:layout_width="200dp"
                        android:layout_height="300dp"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/movieDetail_textView_titlePlaceholder_fragment"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="8dp"
                        android:gravity="center"
                        android:text="@string/text_title"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:textColor="@color/onSurface"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/movieDetail_textView_caption_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/text_null"
                android:textColor="@color/mediumEmphasis"
                app:layout_constraintEnd_toEndOf="@+id/cardView"
                app:layout_constraintStart_toStartOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/movieDetail_button_watchTrailer_fragment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/secondary"
                android:paddingStart="32dp"
                android:paddingTop="16dp"
                android:paddingEnd="32dp"
                android:paddingBottom="16dp"
                android:text="@string/text_watchTrailer"
                android:textColor="@color/onSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movieDetail_textView_caption_fragment" />

            <TextView
                android:id="@+id/movieDetail_textView_title_fragment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/text_title"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movieDetail_button_watchTrailer_fragment" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/movieDetail_textView_title_fragment"
                app:layout_constraintTop_toBottomOf="@+id/movieDetail_textView_title_fragment"
                app:srcCompat="@drawable/ic_baseline_star_rate_24" />

            <TextView
                android:id="@+id/movieDetail_textView_rating_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/text_null"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="@+id/imageView2" />

            <View
                android:id="@+id/divider"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toBottomOf="@+id/movieDetail_textView_rating_fragment"
                app:layout_constraintStart_toEndOf="@+id/movieDetail_textView_rating_fragment"
                app:layout_constraintTop_toTopOf="@+id/movieDetail_textView_rating_fragment" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_baseline_arrow_drop_up_24"
                app:layout_constraintBottom_toBottomOf="@+id/divider"
                app:layout_constraintStart_toEndOf="@+id/divider"
                app:layout_constraintTop_toTopOf="@+id/divider" />

            <TextView
                android:id="@+id/movieDetail_textView_popularity_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/text_null"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView" />

            <TextView
                android:id="@+id/movieDetail_textView_description_fragment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:fontFamily="sans-serif"
                android:text="@string/text_null"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/movieDetail_textView_productionCompanyStatic_fragment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/text_productionCompany"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                app:layout_constraintEnd_toEndOf="@+id/movieDetail_textView_title_fragment"
                app:layout_constraintStart_toStartOf="@+id/movieDetail_textView_title_fragment"
                app:layout_constraintTop_toBottomOf="@+id/movieDetail_recyclerView_genre_fragment" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/movieDetail_recyclerView_productionCompany_fragment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clipToPadding="false"
                android:paddingLeft="16dp"
                android:paddingRight="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movieDetail_textView_productionCompanyStatic_fragment" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/text_synopsis"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/movieDetail_textView_productionCompanyStatic_fragment"
                app:layout_constraintStart_toStartOf="@+id/movieDetail_textView_productionCompanyStatic_fragment"
                app:layout_constraintTop_toBottomOf="@+id/movieDetail_recyclerView_productionCompany_fragment" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/movieDetail_recyclerView_genre_fragment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:clipToPadding="false"
                android:overScrollMode="never"
                android:paddingLeft="16dp"
                android:paddingRight="8dp"
                android:scrollbarAlwaysDrawVerticalTrack="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>